# ot-harjoitusty-

./: .gitignore  README.md
TypingTest/: .coveragerc  .env  .env.test  pyproject.toml  tasks.py
TypingTest/data/: test_statistics.sqlite  test_users.sqlite
TypingTest/src/: config.py  database_connection.py  database_initialize.py  index.py
TypingTest/src/UI/: create_user_view.py  login_view.py  menu_view.py  typing_test_finish_view.py  typing_test_view.py  ui.py  user_statistics_view.py
TypingTest/src/entities/: statistic.py  user.py
TypingTest/src/repositories/: statistics_repository.py  user_repository.py
TypingTest/src/services/: sentence_service.py  statistic_calculator.py  statistic_service.py  user_service.py
TypingTest/src/tests/: sentence_service_test.py  statistic_service_test.py  statistics_calculator_test.py  statisticts_test.py
TypingTest/src/tests/repositories/: statistic_repository_test.py  user_repository_test.py
TypingTest/src/tests/services/: sentence_service_test.py  statistic_service_test.py
TypingTest/src/tests/testing_envionment/: test_database_connection.py  test_database_initialize.py  test_repositories.py  testconf.py
TypingTest/src/ui/: create_user_view.py  login_view.py  menu_view.py  typing_test_finish_view.py  typing_test_view.py  ui.py  user_statistics_view.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  testausdokumentti.md  työaikakirjanpito.md  vaatimusmäärittely.md
dokumentaatio/misc/: typingtestseq.txt
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko3/: Nimetön kaavio.drawio
(+4 files in other folders)
